@@ -49,6 +49,7 @@ const static char* module_id="$Id$";
 #include "dbi_postgresql.h"
 #include <sqloco/statement.h>
 #include <sqloco/dbi.h>
+#include <cctype>
 #include <cstdio>
 #include <cstdlib>
 #include <cstring>
@@ -174,6 +175,7 @@ void statement_postgresql::addparam(const std::string& str)
  */
 long statement_postgresql::execute()
 {
+	bool isinsert = false;
 	if (cursor)
 		PQclear(cursor);
 	cursor = 0;
@@ -183,13 +185,21 @@ long statement_postgresql::execute()
 	nullfields.clear();
 	bindings.clear();
 
+	// Determine if statement is an insert
+	std::string::const_iterator it(statement.begin()),
+		end(statement.end());
+	while (it != end && std::isspace(*it))
+		++it;
+	if (*it == 'I' || *it == 'i')	// This must be an 'I'nsert
+		isinsert = true;
+
 	// read through statement, replacing ? with values added with
 	// addparam() functions.
+	// TODO: Merge this step into a common function shared with MySQL library.
 	std::string stmt;
 	bool in1str=false;
 	bool in2str=false;
-	std::string::const_iterator it(statement.begin()),
-		end(statement.end());
+	it = statement.begin();
 	for (; it != end; ++it)
 	{
 		if (in1str || in2str)
@@ -227,8 +237,13 @@ long statement_postgresql::execute()
 		return -1;
 
 	char *tuples = PQcmdTuples(cursor);
-	if ( *tuples != '\0' )
-		return std::atoi(tuples);
+	if (tuples && (*tuples != '\0' || isinsert)) {
+		numrows = std::atoi(tuples);
+		if (!numrows && isinsert) {
+			return -1;
+		}
+		return numrows;
+	}
 
 	unsigned int num_fields, i;
 	num_fields = PQnfields(cursor);
